@@ -144,6 +144,7 @@ struct linestack_context *linestack_new_by_network(struct network *);
 GSList *gen_replication_network(struct network *s);
 GSList *gen_replication_channel(struct channel *c, char *hostmask, char *nick);
 int is_channelname(char *name, struct network *s);
+const char *get_network_feature(struct network *n, char *name);
 
 /* server.c */
 struct network *connect_network(xmlNodePtr);
